2008-05-30  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (check-jdk): Use BUILD_OUTPUT_DIR not LINUX_DIR.
	(check-langtools): Likewise.
	(check-hotspot): Likewise.
	* Makefile.in: Regenerated.

2008-05-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* aclocal.m4,
	* configure: Regenerated.
	* configure.ac: Use enableval
	with --enable options.
	
2008-05-28  Lillian Angel  <langel@redhat.com>

	* AUTHORS: Updated.

2008-05-28  Lillian Angel  <langel@redhat.com>

	* configure.ac: Updated to 1.3.
	* configure: Regenerated.

2008-05-28  Lillian Angel  <langel@redhat.com>

	* NEWS: Updated for release.

2008-05-27  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (ICEDTEA_PATCHES): Remove icedtea-certbundle.patch.
	* Makefile.in: Regenerate.
	* patches/icedtea-certbundle.patch: Remove.

2008-05-26  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Updated jtreg to use correct java.
	* Makefile.in: Regenerated.

2008-05-26  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-certbundle.patch: Added trustStore and
	trustStoreType to props.

2008-05-26  Mark Wielaard  <mwielaard@redhat.com>

	* Makefile.am (ICEDTEA_PATCHES): Add
	patches/icedtea-override-redirect-metacity.patch.
	* Makefile.in: Regenerate.
	* patches/icedtea-override-redirect-metacity.patch: New patch.

2008-05-25  Mark Wielaard  <mark@klomp.org>

	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound:
	Import Gervill fixes from CVS. See CHANGES.txt.
	Added: Software Mixing Mixer.
	Fix: AudioFloatFormatConverter.getTargetFormats()
	* overlays/openjdk/jdk/test/com/sun/media/sound: Imported all tests.

2008-05-25  Mark Wielaard  <mark@klomp.org>

	* Makefile.am: Use -source 1.5 whenever possible.
	* Makefile.in: Regenerated.
	* javac.in: Use -1.5.

2008-05-23  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Updated jtreg to use correct javac and jar.
	* Makefile.in: Regenerated.

2008-05-22  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Fixed conditions for using JAVAC.