@@ -1,5 +1,9 @@
 2008-05-30  Mark Wielaard  <mark@klomp.org>
 
+	* patches/icedtea-ecj.patch: Use `cat file-list` not gjar -@ stdin.
+
+2008-05-30  Mark Wielaard  <mark@klomp.org>
+
 	* Makefile.am (check-jdk): Use BUILD_OUTPUT_DIR not LINUX_DIR.
 	(check-langtools): Likewise.
 	(check-hotspot): Likewise.
